# terminal-chess

./: .gitignore  CLAUDE.md  CMakeLists.txt  TODO.md  format.sh
lib/chess/: board.hpp  display.hpp  game.hpp  game_loop.hpp  game_state.hpp  game_status.hpp  human_player.hpp  move.hpp  move_generator.hpp  ncurses_display.hpp  player.hpp  types.hpp
test/integration/: game_loop_test.cpp
test/unit/: board_test.cpp  game_status_test.cpp  game_test.cpp  human_player_test.cpp  move_generator_test.cpp  move_test.cpp  player_test.cpp  types_test.cpp
